# asl-dmr-bridge

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN-rust.md  DESIGN.md  README.md  config.example.toml
.github/workflows/: build-deb.yml  ci.yml
ambe/: Cargo.toml
ambe/examples/: dv3000_capture.rs  fetch_amb_samples.rs  gen_golden.rs
ambe/mbelib-sys/: Cargo.toml  build.rs
ambe/mbelib-sys/src/: lib.rs
ambe/src/: ambeserver.rs  chip.rs  cli.rs  codeword.rs  dv3000.rs  lib.rs  mbelib.rs  rates.rs  test_harness.rs  test_vectors.rs  thumbdv.rs  wire.rs
ambe/tests/: ambeserver_golden.rs  encode_loopback.rs  mbelib_golden.rs  real_amb_samples.rs  thumbdv_golden.rs
ambe/tests/fixtures/: README.md  ambeserver_golden.meta.toml  mbelib_golden.meta.toml  thumbdv_golden.meta.toml
ambe/tests/fixtures/channel_coding/: README.md  utt000.coded72  utt000.raw49  utt001.coded72  utt001.raw49  utt002.coded72  utt002.raw49  utt003.coded72  utt003.raw49  utt004.coded72  utt004.raw49  utt005.coded72  utt005.raw49  utt006.coded72  utt006.raw49  utt007.coded72  utt007.raw49  utt008.coded72  utt008.raw49  utt009.coded72  utt009.raw49  utt010.coded72  utt010.raw49  utt011.coded72  utt011.raw49
ambeserver/: Cargo.toml
ambeserver/src/: main.rs
bmcli/: Cargo.toml
bmcli/src/: main.rs
brandmeister-api/: Cargo.toml
brandmeister-api/src/: client.rs  error.rs  lib.rs  types.rs
bridge/: Cargo.toml
bridge/examples/: ambe_bits2wav.rs  parrot_test.rs  usrp_dump.rs  usrp_play.rs  usrp_send.rs
bridge/src/: agc.rs  bm_provision.rs  brandmeister_provision.rs  config.rs  homebrew_client.rs  main.rs  stats.rs  types.rs  usrp.rs
bridge/src/network/: brandmeister.rs  mod.rs
data/: check123-s16le-8000-c1.raw
dmr-events/: Cargo.toml
dmr-events/src/: lib.rs
dmr-subscriber/: Cargo.toml
dmr-subscriber/src/: lib.rs
dmr-types/: Cargo.toml
dmr-types/src/: lib.rs
dmr-wire/: Cargo.toml
dmr-wire/src/: audio.rs  bptc.rs  dmrd.rs  embedded_lc.rs  fec.rs  frame.rs  lib.rs  rs.rs  sync.rs  talker_alias.rs  voice.rs  voice_channel.rs
dmr-wire/src/voice/: ptt.rs  tests.rs
dmr-wire/tests/: voice_channel_goldens.rs
docs/: AMBE-BITS2WAV.md  AMBESERVER.md  BRANDMEISTER-API.md  PARROT-TEST.md  TEST-VECTORS.md  TODO.md  USRP-METADATA.md
packaging/: 99-thumbdv.rules  asl-dmr-bridge.default  asl-dmr-bridge.service
packaging/maintainer-scripts/: postinst
scripts/githooks/: pre-commit
usrp-wire/: Cargo.toml
usrp-wire/src/: lib.rs
