[package]
name = "ambeserver"
version = "1.3.0"
edition.workspace = true
license.workspace = true
description = "Multi-tenant UDP-to-serial proxy for DVSI AMBE-3000R chips."

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "error-context", "help", "std", "suggestions", "usage"] }
serialport.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
