[package]
name = "ambeserver"
version = "1.4.0"
edition.workspace = true
license.workspace = true
description = "UDP-to-serial proxy for a DVSI AMBE-3000R chip with one-active-session exclusivity."

[dependencies]
ambe.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "error-context", "help", "std", "suggestions", "usage"] }
serialport.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
