[package]
name = "bmcli"
version = "1.2.0"
edition.workspace = true
license.workspace = true
description = "Brandmeister API CLI: query / manage a peer's static talkgroups, plus diagnostic reads."

[[bin]]
name = "bmcli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
brandmeister-api.workspace = true
clap.workspace = true
dmr-types.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
