[package]
name = "brandmeister-api"
version = "1.1.0"
edition.workspace = true
license.workspace = true
description = "Typed Rust client for the Brandmeister Halligan REST API (v2)."

[dependencies]
dmr-types.workspace = true
reqwest.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
wiremock.workspace = true
