[package]
name = "dmr-events"
version = "1.4.0"
edition.workspace = true
license.workspace = true
description = "Bridge-presentation types for DMR call metadata: CallMetadata + CallsignLookup + MetaEvent."

[dependencies]
dmr-types.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json.workspace = true
