[package]
name = "dmr-subscriber"
version = "1.4.0"
edition.workspace = true
license.workspace = true
description = "DMR ID -> callsign / operator name lookup, loaded from a RadioID-style CSV."

[dependencies]
csv.workspace = true
dmr-types.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
