[package]
name = "dmr-types"
version = "1.2.0"
edition.workspace = true
license.workspace = true
description = "Shared on-air DMR ID newtypes (DmrId, SubscriberId, Talkgroup, ColorCode, Slot)."

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
toml.workspace = true
