[package]
name = "dmr-wire"
version = "1.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ambe.workspace = true
dmr-types.workspace = true
dmr-events.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
hex.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
